--- a/config/two_percent_milk.conf
+++ b/config/two_percent_milk.conf
@@ -10,3 +10,11 @@
 
 # CONFIG_ZMK_BATTERY_REPORTING=y
 # CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+
+CONFIG_ZMK_MOUSE=y
+
+# Better compatibility with iPadOS
+CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
+
+# Boost Bluetooth TX Power to hopefully help with iPad
+CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
