--- a/config/two_percent_milk.conf
+++ b/config/two_percent_milk.conf
@@ -8,9 +8,9 @@
 # Uncomment the following line to turn on logging, and set ZMK logging to debug output
 # CONFIG_ZMK_USB_LOGGING=y
 
-# CONFIG_ZMK_BATTERY_REPORTING=y
-# CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
-# CONFIG_BT_BAS=y
+CONFIG_ZMK_BATTERY_REPORTING=y
+CONFIG_ZMK_BATTERY_REPORT_INTERVAL=60
+CONFIG_BT_BAS=y
 
 CONFIG_ZMK_MOUSE=y
 
